# pycommontools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pycommontools/configs/: logging.py
src/pycommontools/resources/: singleton.py
