[project]
name = "pycommontools"
version = "0.0.2"
description = "A collection of common Python utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
  { name="eeeelya", email="goooroshchik@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/eeeelya/pycommontools"
Issues = "https://github.com/eeeelya/pycommontools/issues"

[build-system]
requires = ["uv_build >= 0.9.9, <0.10.0"]
build-backend = "uv_build"